Changes
=======

Next release
------------

- Update Dutch translations.

- Translate title and description of items for sequence fields.


0.9.2 (2011-07-22)
------------------

- Chameleon 2 compatibility.

- Use default widgets for a schema's baseclass if known instead of always
  falling back to a text widget.


- Deform now includes a ``beautify.css`` (contributed by Ergo^) in its static
  directory, which can be used to make form element styling prettier.

- Moved ``deformdemo`` into its own package and Github repository
  (https://github.com/Pylons/deformdemo).

0.9.1 (2011-06-23)
------------------

- Add Dutch translation.

- Add the ``deform.widget.DateTimeWidget`` widget, which uses the jQueryUI
  Timepicker add-on.

  ``DateTimeWidget`` uses the ISO8601 combined date and time format
  internally, as expected by ``colander.DateTime``, but converts to
  the more friendly separate date and time format for display in the
  widget.

  This widget is now the default for colander.DateTime schema types.

- Upgrade to jquery-ui 1.8.11, as required by the timepicker.

- Compile all ``.po`` files to ``.mo`` in ``deform/locale`` and remove Texan
  locale (funny, but breaks ``python setup.py compile_catalog`` with an
  UnknownLocale error.)

- Fix references to repoze.bfg and update obsoletes URLs in the demo application

- Remove unused ``jquery.autocomplete.min.js`` file from static directory.

- SelectWidget now has a ``size`` attribute to support single select widgets
  that are not dropdowns.

- The value fed to the ``deform.form.Button`` class as ``name`` would
  generate an invalid HTML id if it contained spaces.  Now it converts spaces
  to underscores if they exist in the name.  See
  https://github.com/Pylons/deform/pull/14 .

- Deformdemo application now has a Time field demonstration.

- Deform Chameleon templates now contain i18n:translate tags.

- German translation updated.

- Fixed invalid HTML generated for "select" widget.
